# crypto-paperbot

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: paper.yml
data/: paper_state.sqlite
docs/: index.html
paperbot/: __init__.py  cli.py  config.py  dashboard.py  data.py  execution.py  indicators.py  logutil.py  report.py  walkforward.py
paperbot/backtest/: __init__.py  engine.py  metrics.py
paperbot/paper/: __init__.py  engine.py  runner.py  state.py
paperbot/strategies/: __init__.py  base.py  meanrevert.py  trendfollow.py
tests/: conftest.py  scripted.py  test_fills.py  test_risk.py
