[project]
name = "crypto-paperbot"
version = "0.1.0"
description = "Paper-trading crypto bot. Simulation only — no live orders, ever."
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bot = "paperbot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paperbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
